fix overflow, remove grid template columns for low width

--- a/numerc/static/numerc/styles.css
+++ b/numerc/static/numerc/styles.css
@@ -135,7 +135,6 @@
 		margin: 0;
 	}
 	article {
-		width: 100%; 
 		padding: 0;
 		margin: 0;
 		/* background-color: var(--blackBG); */
@@ -573,10 +572,6 @@
 		font-size: 0.85rem;
 		text-align: left;
 		margin-top: 0;
-	}
-	section > p {
-		line-height: calc(1ex / 0.32);
-		margin: calc(0.7ex / 0.32) 0;
 	}
 	section h2 + p, 
 	section h3 + p, 
@@ -2466,8 +2461,14 @@
 			padding-bottom: 15vh;
 			z-index: 1;
 		}
-		main { display: block; }
-		section {padding: 0.5em 10vw;}
+		main {
+			display: block;
+			grid-template-columns: none;
+		}
+		section {
+			margin: 2%;
+			padding: 0.5em 10vw;
+		}
 		pre {margin: 1px 0;}
     .sidenote,
     .marginnote {
@@ -2514,7 +2515,7 @@
 	@media (max-width: 900px) {
 		div.compare {display: block;}
 	}
-	@media (max-width: 600px) {
+	@media (max-width: 850px) {
 		div.content {padding: 0;}
 		section {padding: 1vw 2vw;}
 	}
